feat: 댓글 저장, 수정 시 페이지 새로고침(reload) 방식으로 변경

--- a/restaurant/src/main/resources/templates/shared/detail.html
+++ b/restaurant/src/main/resources/templates/shared/detail.html
@@ -214,28 +214,16 @@
       },
       success: function (res) {
         console.log("요청성공", res);
-        let output = "";
 
-        for (let i in res) {
-          output += '<div class="card mb-3" style="width: 60%; margin: 10px auto;">';
-          output += '<div class="card-body">';
-          output += '<h6 class="card-subtitle mb-2 text-muted">' + res[i].commentWriter + '</h6>';
-          output += '<p class="card-text">' + res[i].commentContents + '</p>';
-          output += '<div style="text-align: right">';
-          output += '<p>' + res[i].commentCreatedTime + '</p>';
-          output += '<a href="#" class="card-link">수정</a>';
-          output += '<a href="#" class="card-link">삭제</a>';
-          output += '</div></div></div>';
-        }
-
-        document.getElementById('comment-list').innerHTML = output;
-        document.getElementById('commentContent').value = ''; // 내용 입력란 초기화
+        // 페이지 새로고침
+        location.reload();
       },
       error: function(err) {
         console.log("요청 실패", err)
       }
     })
   }
+
 
   function showEditCommentForm(element) {
     var commentId = element.getAttribute('data-comment-id');
@@ -269,16 +257,7 @@
       },
       success: function (res) {
         console.log("댓글 수정 성공", res);
-
-        // 수정이 성공했을 때, 해당 댓글만 업데이트
-        const editedComment = document.querySelector(`[data-comment-id="${commentId}"]`);
-
-        if (editedComment && editedComment.querySelector('.card-text')) {
-          editedComment.querySelector('.card-text').innerText = contents;
-        }
-
-        const updatedComment = res;
-        updateCommentList(updatedComment);
+        location.reload();
 
         // 수정 칸을 다시 숨김
         document.getElementById('editCommentCard').style.display = 'none';
@@ -286,21 +265,6 @@
       },
       error: function (err) {
         console.log("댓글 수정 실패", err);
-      }
-    });
-  }
-
-  // 수정된 내용을 비동기적으로 갱신하는 함수
-  function updateCommentList(updatedComment) {
-    // 기존 댓글 목록을 가져와서 배열로 변환
-    const commentList = Array.from(document.querySelectorAll('#comment-list .card'));
-
-    // 수정된 댓글과 일치하는 댓글을 찾아서 내용을 갱신
-    commentList.forEach(commentCard => {
-      const commentId = commentCard.querySelector('.btn-link').getAttribute('data-comment-id');
-      if (commentId === updatedComment.id.toString()) {
-        commentCard.querySelector('.card-subtitle').innerText = updatedComment.commentWriter;
-        commentCard.querySelector('.card-text').innerText = updatedComment.commentContents;
       }
     });
   }
